# comms-sdk-dotnet

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Readme.md
.github/actions/configure/: action.yml
.github/workflows/: build-and-test.yml  package.yml  pages.yml  publish.yml
cmake/: FindDVC.cmake  FindDolbyIO.cmake  FindDotnet.cmake  FindSphinx.cmake  MacOSXBundleInfo.plist.in  copy_dependencies.cmake  package.json.in  unity.cmake  version.cmake
cmake/dotnet/: executable.csproj.in  library.csproj.in  runtime.csproj.in  test.csproj.in
docs/: CMakeLists.txt  docfx.json  filterConfig.yml  index.md  started.md  toc.yml  unity.md
docs/documentation/: index.md  started.md  toc.yml  unity.md  visualscripting.md
docs/documentation/sdk/: index.md  started.md  toc.yml
docs/documentation/unity/: toc.yml  unity.md  visualscripting.md
docs/documentation/unity/components/: index.md
docs/documentation/unity/getting-started/: example.md  individual-scene.md  initialization.md  installation.md  remote-participants.md  shared-scene.md
docs/documentation/unity/samples/: conference.md  demo.md
docs/documentation/unity/tutorial/: tutorial.md
docs/documentation/unity/visualscripting/: events.md  nodes.md
docs/documentation/unity/visualscripting/tutorials/: individual-scene.md  initialization.md  remote-participants.md  shared-scene.md  work-with-real-users.md
docs/template/darkfx/: conceptual.extension.js
docs/template/darkfx/styles/: main.css
samples/CmdLine/: CMakeLists.txt  Main.cs
samples/SimpleApp/: CMakeLists.txt  Main.cs
samples/unity/: DolbyIOSample.cs
scripts/: DolbyIOManager.cs  VectorExtension.cs  dolbyio.comms.asmdef
scripts/Units/: ActiveSpeakerChangeEvent.cs  AudioDeviceAddedEvent.cs  AudioDeviceChangedEvent.cs  AudioDeviceUnit.cs  ConferenceUnit.cs  DemoUnit.cs  DolbyIOUnit.cs  DolbyUnitDescriptor.cs  EventNames.cs  GetToken.cs  IDolbyUnit.cs  MuteUnit.cs  ParticipantAddedEvent.cs  ParticipantsUnit.cs  PlayerPositionUnit.cs  PositionUnit.cs  RemotePlayerPositionUnit.cs  SetAudioDeviceInputUnit.cs  SetAudioDeviceOutputUnit.cs  SetPlayerPositionUnit.cs  SetRemotePlayerPositionUnit.cs  SpatialConferenceUnit.cs  UnitHelpers.cs
scripts/android/: compile.sh  unzip.sh
src/DolbyIO.Comms.Native/: CMakeLists.txt  audio.cc  conference.cc  conference.h  handlers.h  media_device.cc  media_device.h  sdk.cc  sdk.h  session.cc  session.h  translators.h  utils.h  video.cc  video_frame_handler.cc  video_frame_handler.h  video_sink.cc  video_sink.h  yuv_to_rgba.h
src/DolbyIO.Comms.Native/tests/: translators_tests.cc
src/DolbyIO.Comms.Sdk/: AssemblyInfo.cs  CMakeLists.txt  ComponentName.cs  DolbyIOException.cs  DolbyIOSDK.cs
src/DolbyIO.Comms.Sdk/Native/: Callback.cs  Enum.cs  Handlers.cs  Native.cs  Struct.cs
src/DolbyIO.Comms.Sdk/Native/Enums/: ConferenceAccessPermission.cs  ConferenceStatus.cs  DeviceDirection.cs  ListenMode.cs  LogLevel.cs  ParticipantStatus.cs  ParticipantType.cs  Result.cs  ScreenShareType.cs  SpatialAudioStyle.cs
src/DolbyIO.Comms.Sdk/Native/Structs/: AudioDevice.cs  Conference.cs  ConferenceOptions.cs  ConferenceParams.cs  ConnectionOptions.cs  Constants.cs  DeviceIdentity.cs  JoinOptions.cs  ListenOptions.cs  MediaConstraints.cs  Participant.cs  ParticipantInfo.cs  ScreenShareSource.cs  UserInfo.cs  VideoDevice.cs  VideoFrame.cs  VideoFrameHandler.cs  VideoSink.cs  VideoTrack.cs
src/DolbyIO.Comms.Sdk/Native/Structs/Handles/: VideoFrame.cs  VideoFrameHandlerHandle.cs  VideoSinkHandle.cs
src/DolbyIO.Comms.Sdk/Services/: Conference.cs  ConferenceService.cs  MediaDevice.cs  MediaDeviceService.cs  Session.cs  SessionService.cs
src/DolbyIO.Comms.Sdk/Services/Audio/: Audio.cs  AudioService.cs  LocalAudio.cs  LocalAudioService.cs  RemoteAudio.cs  RemoteAudioService.cs
src/DolbyIO.Comms.Sdk/Services/Video/: LocalVideoService.cs  RemoteVideoService.cs  VideoService.cs
src/DolbyIO.Comms.Tests/: AudioTests.cs  CMakeLists.txt  ConferenceTests.cs  DolbyIOSDKTests.cs  MediaDeviceTests.cs  SdkFixture.cs  SessionTests.cs  VideoTests.cs
src/DolbyIO.Comms.Tests/Interop/: NativeTests.cs
unity/: .gitignore  LICENSE  Readme.md  package.json
unity/Plugins/osx-universal/native/: libDolbyIO.Comms.Native.dylib  libdolbyio_comms_media.dylib  libdolbyio_comms_sdk.dylib  libdvclient.dylib
unity/Plugins/osx-x64/native/: libDolbyIO.Comms.Native.dylib  libdolbyio_comms_media.dylib  libdolbyio_comms_sdk.dylib  libdvdnr.dylib
unity/Runtime/Components/: DolbyIOManager.cs
unity/Runtime/Extensions/: VectorExtension.cs
unity/Runtime/Units/: ActiveSpeakerChangeEvent.cs  AudioDeviceAddedEvent.cs  AudioDeviceChangedEvent.cs  AudioDeviceUnit.cs  ConferenceStatusUpdatedEvent.cs  DemoUnit.cs  DolbyIOUnit.cs  DolbyUnitDescriptor.cs  EventNames.cs  GetToken.cs  IDolbyUnit.cs  InvalidTokenErrorEvent.cs  MuteUnit.cs  ParticipantAddedEvent.cs  ParticipantUpdatedEvent.cs  ParticipantsUnit.cs  SetAudioDeviceInputUnit.cs  SetAudioDeviceOutputUnit.cs  SetPlayerDirectionUnit.cs  SetPlayerPositionUnit.cs  SetRemotePlayerPositionUnit.cs  SignalingChannelErrorEvent.cs  SpatialConferenceUnit.cs  UnitHelpers.cs
unity/Runtime/Units/Conference/: GetConference.cs  LeaveConferenceUnit.cs
unity/Samples~/: dolbyio.comms.asmdef
unity/Samples~/Demo/: .gitignore
unity/Samples~/Demo/Assets/: Readme.asset  UniversalRenderPipelineAsset.asset
unity/Samples~/Demo/Assets/Character/Materials/: M_Armature_Arms.mat  M_Armature_Body.mat  M_Armature_Legs.mat
unity/Samples~/Demo/Assets/Environment/Art/Materials/: Blue_Mat.mat  GreyBlue_Mat.mat  GridBlue_01_Mat.mat  GridOrange_01_Mat.mat  GridWhite_01_Mat.mat  ShaderGraphGrid_01_Mat.mat
unity/Samples~/Demo/Assets/Graphs/: App.asset  position.asset
unity/Samples~/Demo/Assets/Scenes/: Playground.unity
unity/Samples~/Demo/ProjectSettings/: GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  VisualScriptingSettings.asset
unity/Samples~/SharedScene/: App.cs  Camera.cs  Participant.prefab  SharedScene.unity
(+4 files in other folders)
